Week: 09 Day: 03 Commit: 1

--- a/www/igme110/styletiles/index.html
+++ b/www/igme110/styletiles/index.html
@@ -133,7 +133,7 @@
             <h1>Logo Here</h1>
         </div>
         <div id="project">
-            <h2>Your Name's IGME 110 Web Project Style Tile</h2>
+            <h2>Adit's IGME 110 Web Project Style Tile</h2>
             <h4><span class="selected">Version 1</span> &bull; <a href="styletile2.html">Version 2</a> &bull; <a href="styletile3.html">Version 3</a></h4>
         </div>
     </header>
